crates/toml_edit/tests/fixtures/invalid/table-whitespace.stderr
TOML parse error at line 1, column 10
  |
1 | [invalid key]
  |          ^
Unexpected `k`
Expected `.` or `]`
While parsing a Table Header
